# arXivSearchEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ClassifierClass_8cpp.html  ClassifierClass_8h.html  ClassifierClass_8h_source.html  ClassifierEngine_8cpp.html  ClassifierEngine_8h.html  ClassifierEngine_8h_source.html  Compressor_8cpp.html  Compressor_8h.html  Compressor_8h_source.html  ConsoleEngine_8cpp.html  DiskInvertedIndex_8cpp.html  DiskInvertedIndex_8h.html  DiskInvertedIndex_8h_source.html  DiskIo_8h_source.html  DiskReader_8cpp.html  DiskReader_8h.html  DiskReader_8h_source.html  DiskWriter_8cpp.html  DiskWriter_8h.html  DiskWriter_8h_source.html  DocInfo_8cpp.html  DocInfo_8h.html  DocInfo_8h_source.html  Engine.sln  Engine_8cpp.html  Engine_8h.html  Engine_8h_source.html  InvertedIndex_8cpp.html  InvertedIndex_8h.html  InvertedIndex_8h_source.html  KDeserializer_8cpp.html  KDeserializer_8h.html  KDeserializer_8h_source.html  KEngine_8cpp.html  KEngine_8h.html  KEngine_8h_source.html  (+163 more)
CMakeModules/: FindGTestSrc.cmake
Engine/: ConsoleEngine.cpp  DiskPositionalIndex.cpp  DiskPositionalIndex.h  DocInfo.h  Engine.cpp  Engine.h  InvertedIndex.h  KgramIndex.cpp  PorterStemmer.cpp  PorterStemmer.h  PositionalIndexWriter.cpp  PositionalIndexWriter.h  QEngine.cpp  QEngine.h  SimpleEngine.vcxproj  Tokenizer.cpp  Tokenizer.h
EngineTest/: EngineTest.sln
EngineTest/EngineTest/: EngineTest.vcxproj  EngineTest.vcxproj.filters  Test.cpp
EngineTest/EngineTest/testFiles/: test0.json  test1.json  test2.json  test3.json  test4.json
SimpleEngine/: DocInfo.cpp  DocInfo.h  InvertedIndex.cpp  InvertedIndex.h  PorterStemmer.cpp  PorterStemmer.h  QEngine.cpp  QEngine.h  SimpleEngine.cpp  SimpleEngine.h  SimpleEngine.vcxproj  SimpleEngine.vcxproj.filters  TokenStream.h  Tokenizer.cpp  Tokenizer.h  test.txt
arXivSearchEngine/: C++BoostPropertySheet.props  ClassifierClass.h  ClassifierEngine.cpp  ClassifierEngine.h  Compressor.cpp  Compressor.h  ConsoleEngine.cpp  DiskInvertedIndex.cpp  DiskInvertedIndex.h  DiskIo.cpp  DiskIo.h  DiskPositionalIndex.cpp  DiskPositionalIndex.h  DiskReader.cpp  DiskReader.h  DiskWriter.cpp  DiskWriter.h  DocInfo.cpp  DocInfo.h  Engine.cpp  Engine.h  InvertedIndex.cpp  InvertedIndex.h  KDeserializer.cpp  KDeserializer.h  KEngine.cpp  KEngine.h  KSerializer.cpp  KSerializer.h  KgramIndex.cpp  KgramIndex.h  PorterStemmer.cpp  PositionalIndexWriter.cpp  PositionalIndexWriter.h  QEngine.cpp  QEngine.h  Serializer.cpp  Serializer.h  TokenStream.h  Tokenizer.cpp  (+6 more)
arXivSearchEngine/arXivSearchEngine/: readme.txt
config/: Doxyfile  provision.sh  provisionXenial.sh  publish-doxygen  travisci_rsa.enc  travisci_rsa.pub
include/: Compressor.h  DiskInvertedIndex.h  DiskReader.h  Engine.h  KEngine.h  Tokenizer.h  WildEngine.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_7.js  all_70.js  all_71.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_64.js  classes_7.js  classes_8.js  classes_a.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  (+35 more)
src/: ClassifierClass.cpp  ClassifierEngine.cpp  ConsoleEngine.cpp  Engine.cpp  WildEngine.cpp
test/: Classifier_test.cpp  DiskInvertedIndex_test.cpp  DiskIo_test.cpp  DiskRW_test.cpp  DocInfo_test.cpp  Engine_test.cpp  InvertedIndex_test.cpp  KEngine_test.cpp  KSerializer_test.cpp  KgramIndex_test.cpp  Kgrams_test.cpp  PorterStemmer_test.cpp  QEngine_test.cpp  WildEngine_test.cpp  initial_test.cpp
test/documents/federalistPapers/: paper_11.json  paper_15.json  paper_17.json  paper_19.json  paper_2.json  paper_20.json  paper_21.json  paper_22.json  paper_23.json  paper_24.json  paper_25.json  paper_26.json  paper_29.json  paper_30.json  paper_31.json  paper_32.json  paper_33.json  paper_34.json  paper_36.json  paper_38.json  paper_39.json  paper_40.json  paper_41.json  paper_42.json  paper_43.json  paper_44.json  paper_47.json  paper_48.json  paper_49.json  paper_5.json  paper_50.json  paper_52.json  paper_53.json  paper_54.json  paper_56.json  paper_59.json  paper_6.json  paper_60.json  paper_62.json  paper_64.json  (+21 more)
test/documents/testCorpus/: article0.json  article1.json  article2.json  article3.json  article4.json
test/testCorpus/: article0.json  article1.json  article3.json  article4.json
